--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -34,6 +34,7 @@
     "pug": "^3.0.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.22",
     "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
   }
