--- a/WebTech-Backend/tsconfig.json
+++ b/WebTech-Backend/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "ES6",
+    "module": "Node16",
+    
+    "esModuleInterop": true,
+    "moduleResolution": "node16",
+    "allowSyntheticDefaultImports": true,
+
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
+    
     
     "outDir": "./dist",
     "rootDir": "./src",
