--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -34,7 +34,9 @@
     "pug": "^3.0.3"
   },
   "devDependencies": {
+    "@types/node": "^22.15.21",
     "@types/express": "^4.17.22",
+    "@types/pug": "^2.0.10",
     "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
   }
