--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -31,11 +31,13 @@
   },
   "dependencies": {
     "express": "^5.1.0",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@types/node": "^22.15.21",
     "@types/express": "^4.17.22",
+    "@types/node": "^22.15.21",
     "@types/pug": "^2.0.10",
     "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
