--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -30,6 +30,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7",
