--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -32,11 +32,13 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/express-session": "^1.18.1",
     "@types/express": "^4.17.22",
     "@types/node": "^22.15.21",
     "@types/pug": "^2.0.10",
