--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -30,6 +30,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
@@ -38,8 +39,9 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@types/express-session": "^1.18.1",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.22",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^22.15.21",
     "@types/pug": "^2.0.10",
     "nodemon": "^3.1.10",
