removed author url from package.json

--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -19,8 +19,7 @@
   "keywords": [],
   "author": {
     "name": "Giuseppe Amato",
-    "email": "giuseppe.amato8@studenti.unina.it",
-    "url": ""
+    "email": "giuseppe.amato8@studenti.unina.it"
   },
   "contributors": [],
   "scripts": {
