--- a/WebTech-Frontend/package.json
+++ b/WebTech-Frontend/package.json
@@ -1,40 +1,37 @@
 {
-  "name": "webtech-streetcats-frontend",
-  "version": "1.0.0",
-  "description": "Frontend for Unina's Web Technologies 2025 project StreetCats",
-  "main": "index.js",
-  "type": "module",
-  "license": "AGPL-version-3.0",
-  "private": false,
-  "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
-  },
-  "homepage": "",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gyus-e/WebTech-Project.git"
-  },
-  "bugs": "",
-  "keywords": [],
-  "author": {
-    "name": "Giuseppe Amato",
-    "email": "giuseppe.amato8@studenti.unina.it",
-    "url": ""
-  },
-  "contributors": [
-
-  ],
+  "name": "web-tech-frontend",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "",
-    "test": ""
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
+  "private": true,
   "dependencies": {
-    "angular": "^1.8.2"
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/router": "^19.2.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "typescript": "^5.8.3",
-    "sass": "^1.89.0"
+    "@angular-devkit/build-angular": "^19.2.13",
+    "@angular/cli": "^19.2.13",
+    "@angular/compiler-cli": "^19.2.0",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.7.2"
   }
 }
