--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -42,6 +42,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.22",
     "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
     "@types/pug": "^2.0.10",
     "nodemon": "^3.1.10",
