--- a/WebTech-Frontend/Dockerfile
+++ b/WebTech-Frontend/Dockerfile
@@ -2,5 +2,5 @@ FROM docker.io/node:22-alpine
 COPY . /app
 WORKDIR /app
 RUN npm install
-EXPOSE 3000
-ENTRYPOINT ["npm", "start"]
+EXPOSE 4200
+ENTRYPOINT ["npx", "ng", "serve", "--host", "0.0.0.0"]
