--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -29,6 +29,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
+    "argon2": "^0.43.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -41,6 +42,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/argon2": "^0.14.1",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
