--- a/WebTech-Backend/package.json
+++ b/WebTech-Backend/package.json
@@ -39,7 +39,8 @@
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
