--- a/WebTech-Backend/tsconfig.json
+++ b/WebTech-Backend/tsconfig.json
@@ -10,7 +10,8 @@
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    
+
+    "importHelpers": true,
     
     "outDir": "./dist",
     "rootDir": "./src",
