--- a/WebTech-Frontend/angular.json
+++ b/WebTech-Frontend/angular.json
@@ -8,6 +8,9 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
+        },
+        "@schematics/angular:service": {
+          "path": "src/app/_services"
         }
       },
       "root": "",
