--- a/WebTech-Frontend/package.json
+++ b/WebTech-Frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.10",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
@@ -32,6 +33,7 @@
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.18",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
