--- a/WebTech-Frontend/package.json
+++ b/WebTech-Frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@bluehalo/ngx-leaflet": "^19.0.0",
     "@tailwindcss/postcss": "^4.1.10",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
