--- a/WebTech-Frontend/package.json
+++ b/WebTech-Frontend/package.json
@@ -22,8 +22,10 @@
     "@tailwindcss/postcss": "^4.1.10",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "ngx-quill": "^27.1.2",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.6",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.10",
     "tslib": "^2.3.0",
