--- a/WebTech-Frontend/package.json
+++ b/WebTech-Frontend/package.json
@@ -35,8 +35,10 @@
     "@angular-devkit/build-angular": "^19.2.13",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
+    "@playwright/test": "^1.53.2",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.18",
+    "@types/node": "^24.0.10",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
