--- a/WebTech-Frontend/angular.json
+++ b/WebTech-Frontend/angular.json
@@ -115,6 +115,17 @@
             ],
             "scripts": []
           }
+        },
+        "e2e": {
+          "builder": "playwright-ng-schematics:playwright",
+          "options": {
+            "devServerTarget": "WebTech-Frontend:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "WebTech-Frontend:serve:production"
+            }
+          }
         }
       }
     }
