--- a/WebTech-Frontend/package.json
+++ b/WebTech-Frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -35,7 +36,7 @@
     "@angular-devkit/build-angular": "^19.2.13",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
-    "@playwright/test": "^1.53.2",
+    "@playwright/test": "1.53.2",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.18",
     "@types/node": "^24.0.10",
@@ -45,6 +46,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "playwright-ng-schematics": "^2.0.3",
     "typescript": "~5.7.2"
   }
 }
